<resources>
    <string name="app_name">Accessibility Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="basic_views_login_progress_label">Login progress</string>
    <string name="basic_views_login_progress_percent">%1$d%%</string>
    <string name="basic_views_login_progress_percent_description">Login progress is at %1$d%%</string>
    <string name="basic_views_text_group">Group</string>
    <string name="basic_views_text_text">Text</string>
    <string name="basic_views_text">This is some example text</string>
    <string name="basic_views_login_text_button">Login</string>
    <string name="basic_views_login_button">Login</string>
    <string name="basic_views_login_started">Login started</string>
    <string name="basic_views_login_cancel">Cancel login</string>
    <string name="basic_views_image_description">Man with phone and coffee</string>
    <string name="basic_views_share_button">Share</string>
    <string name="basic_views_notification_settings_label">Notification sounds</string>
    <string name="basic_views_notification_toggle_text">Notification sounds</string>
    <string name="basic_views_notification_toggle_on">On</string>
    <string name="basic_views_notification_toggle_off">Off</string>
    <string name="basic_views_logging_switch_text">Logging</string>
    <string name="basic_views_logging_switch_on">Enabled</string>
    <string name="basic_views_logging_switch_off">Disabled</string>
    <string name="basic_views_gps_settings_label">Use GPS</string>
    <string name="basic_views_gender_label">Gender</string>
    <string name="basic_views_gender_male">Male</string>
    <string name="basic_views_gender_female">Female</string>
    <string name="basic_views_speed_label">Speed</string>
    <string name="basic_views_download_label">Downloading data…</string>
    <string name="basic_views_hint_email">Email</string>

    <string name="product_item_buy_button">Buy product</string>
    <string name="product_item_price_text">%1$s $</string>

    <string name="recycler_view_add_button">Add</string>
    <string name="recycler_view_remove_button">Remove</string>
    <string name="recycler_view_change_button">Change</string>
</resources>
